--- a/index.css
+++ b/index.css
@@ -328,6 +328,9 @@ footer{
   }
 }
 @media (max-width:820px){
+   .home{
+    height: 70vh;
+  }
   .work-container{
       grid-template-columns: 1fr 1fr;
     }
